# atlas

./: .atlas-handoff.md  .coderabbit.yaml  .doc-patch-pending.json  .gitattributes  .gitignore  .pre-commit-config.yaml  ATLAS-DESIGN-RATIONALE.md  ATLAS_SKILL_REBUILT.md  Atlas-SPEC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM_REPORT.md  Cargo.toml  DEVELOPMENT_MILESTONE_CHECKLIST.md  DOC-ISSUES-VERIFIED.md  DOCS_AND_SKILL_RESTRUCTURE_COMPLETE.md  DOCS_AUDIT_SUMMARY.md  DOCS_CONSOLIDATION_AUDIT.md  DOCS_CONSOLIDATION_COMPLETE.md  FOUNDATION-PHASES-FIXED.md  HANDOFF-PHASE-18F.md  NEXT_SESSION_PROMPT.md  PHASE_DOC_REFERENCE_FIX_COMPLETE.md  PHASE_DOC_REFERENCE_FIX_MAP.md  PRD.md  README.md  RELEASE.md  RELEASE_CHECKLIST_v0.1.md  ROADMAP.md  STATUS.md  TEST-SERVER.sh  TESTING.md  TEST_AUDIT_REPORT.md  WORKFLOW_FIXES_2025-02-16.md  advanced-codex-audit.md  atlas-dev.db  ci-runner.sh  codecov.yml  (+7 more)
crates/atlas-build/: Cargo.toml
crates/atlas-build/src/: CLAUDE.md  binary_emit.rs  build_order.rs  builder.rs  error.rs  fingerprint.rs  incremental.rs  lib.rs  module_resolver.rs  output.rs  profile.rs  script.rs  targets.rs
crates/atlas-build/src/cache/: invalidation.rs  metadata.rs  mod.rs
crates/atlas-build/tests/: binary_output_tests.rs  builder_tests.rs  cache_tests.rs  incremental_tests.rs  integration_tests.rs  profile_tests.rs  script_tests.rs
crates/atlas-config/: Cargo.toml
crates/atlas-config/src/: CLAUDE.md  lib.rs  manifest.rs  project.rs  security.rs
crates/atlas-config/tests/: config_tests.rs
crates/atlas-formatter/: Cargo.toml
crates/atlas-formatter/src/: CLAUDE.md  visitor.rs
crates/atlas-formatter/tests/: comments_tests.rs  formatter_tests.rs  integration_tests.rs
crates/atlas-jit/: Cargo.toml  JIT_STATUS.md
crates/atlas-jit/src/: CLAUDE.md  backend.rs  cache.rs  codegen.rs  hotspot.rs  lib.rs
crates/atlas-jit/tests/: jit_tests.rs
crates/atlas-launcher/: Cargo.toml
crates/atlas-launcher/src/: execute.rs  lib.rs  main.rs  self_path.rs
crates/atlas-launcher/tests/: self_path_tests.rs
crates/atlas-runtime/: Cargo.toml
crates/atlas-runtime/benches/: README.md  baseline.txt  interpreter.rs  lexer.rs  parity.rs  parser.rs  stdlib_benchmarks.rs  typechecker.rs  v02_comprehensive_benches.rs  v02_interpreter_benches.rs  v02_stdlib_benches.rs  v02_vm_optimization_benches.rs  vm_performance_benches.rs
crates/atlas-runtime/examples/: 01_hello_world.rs  02_custom_functions.rs  03_value_conversion.rs  04_persistent_state.rs  05_error_handling.rs  06_sandboxing.rs
crates/atlas-runtime/fuzz/: Cargo.toml  README.md
crates/atlas-runtime/fuzz/fuzz_targets/: fuzz_eval.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_typechecker.rs  vm_fuzz.rs
crates/atlas-runtime/src/: CLAUDE.md  ast.rs  binder.rs  bytecode.rs  compiler.rs  diagnostic.rs  interpreter.rs  jit_trait.rs  json_value.rs  lexer.rs  lib.rs  method_dispatch.rs  module_executor.rs  module_loader.rs  parser.rs  repl.rs  runtime.rs  span.rs  stack_trace.rs  stdlib.rs  symbol.rs  test_utils.rs  token.rs  typecheck_dump.rs  typechecker.rs  types.rs  value.rs  vm.rs
crates/atlas-runtime/src/api/: config.rs  conversion.rs  mod.rs  native.rs  runtime.rs
crates/atlas-runtime/src/async_runtime/: channel.rs  future.rs  mod.rs  primitives.rs  scheduler.rs  task.rs  worker.rs
crates/atlas-runtime/src/bytecode/: disasm.rs  mod.rs  opcode.rs  optimizer.rs  serialize.rs  validator.rs
crates/atlas-runtime/src/compiler/: expr.rs  mod.rs  stmt.rs
crates/atlas-runtime/src/debugger/: breakpoints.rs  inspection.rs  mod.rs  protocol.rs  source_map.rs  state.rs  stepping.rs
crates/atlas-runtime/src/diagnostic/: descriptor.rs  error_codes.rs  formatter.rs  normalizer.rs  warnings.rs
crates/atlas-runtime/src/ffi/: callbacks.rs  caller.rs  loader.rs  marshal.rs  safety.rs  types.rs
crates/atlas-runtime/src/interpreter/: cache.rs  debugger.rs  expr.rs  mod.rs  stmt.rs
crates/atlas-runtime/src/lexer/: literals.rs  mod.rs
crates/atlas-runtime/src/optimizer/: constant_folding.rs  dead_code.rs  mod.rs  peephole.rs
crates/atlas-runtime/src/parser/: expr.rs  mod.rs  stmt.rs
crates/atlas-runtime/src/profiler/: collector.rs  hotspots.rs  mod.rs  report.rs
crates/atlas-runtime/src/reflect/: mod.rs  type_info.rs  value_info.rs
crates/atlas-runtime/src/resolver/: mod.rs
crates/atlas-runtime/src/security/: audit.rs  mod.rs  permissions.rs  policy.rs  sandbox.rs
crates/atlas-runtime/src/sourcemap/: encoder.rs  mod.rs  vlq.rs
crates/atlas-runtime/src/stdlib/: array.rs  async_io.rs  async_primitives.rs  console.rs  crypto.rs  datetime.rs  encoding.rs  fs.rs  future.rs  http.rs  http_server.rs  io.rs  json.rs  math.rs  mod.rs  net.rs  path.rs  process.rs  reflect.rs  regex.rs  sqlite.rs  string.rs  sync.rs  test.rs  types.rs  websocket.rs
crates/atlas-runtime/src/typechecker/: expr.rs  flow_sensitive.rs  generics.rs  inference.rs  methods.rs  mod.rs  narrowing.rs  stdlib_ownership.rs  suggestions.rs  type_guards.rs  unification.rs
crates/atlas-runtime/src/vm/: context.rs  debugger.rs  dispatch.rs  mod.rs  profiler.rs
crates/atlas-runtime/tests/: advanced_features.rs  ai_error_messages.rs  api.rs  api_native_functions_tests.rs  api_sandboxing_tests.rs  assignment_target_tests.rs  ast_instantiation.rs  async_future_tests.rs  async_io_tests.rs  async_primitives_tests.rs  async_runtime.rs  audit_logging_tests.rs  battle_audit.rs  bytecode.rs  bytecode_compiler_integration.rs  bytecode_roundtrip.rs  bytecode_validator_tests.rs  closures.rs  collection_iteration_tests.rs  collections.rs  corpus.rs  datetime_regex.rs  debugger.rs  debugger_protocol_tests.rs  diagnostic_golden.rs  diagnostic_ordering_tests.rs  diagnostics.rs  enhanced_errors_tests.rs  ffi.rs  ffi_integration_complete_tests.rs  ffi_interpreter_tests.rs  ffi_vm_tests.rs  first_class_functions_tests.rs  frontend_integration.rs  frontend_integration_tests.rs  frontend_syntax.rs  function_return_analysis_tests.rs  generic_syntax_tests.rs  generic_type_checking_tests.rs  generics_runtime_tests.rs  (+71 more)
(+2279 files in other folders)
