[workspace]
members = [
    "crates/atlas-runtime",
    "crates/atlas-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[profile.release]
# Optimize for size while maintaining good performance
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
