[package]
name = "atlas-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
insta = { workspace = true }
rstest = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = "3.2"
