[package]
name = "atlas-jit"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
atlas-runtime = { path = "../atlas-runtime" }

# Cranelift JIT compilation
cranelift-codegen = "0.125"
cranelift-frontend = "0.129"
cranelift-jit = "0.125"
cranelift-module = "0.125"
cranelift-native = "0.125"

# Shared utilities
thiserror = "2.0"

[dev-dependencies]
rstest.workspace = true
pretty_assertions.workspace = true
