[package]
name = "atlas-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
atlas-config = { path = "../atlas-config" }
rand = "0.8"

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true
tempfile = "3.8"
