[package]
name = "atlas-runtime"
version.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

# Feature flags:
#   http  — HTTP client, WebSocket, TLS (pulls reqwest + rustls + aws-lc-sys — C build, slow)
#   ffi   — Foreign function interface (pulls libffi + libloading — C build, slow)
#
# Default: both enabled for production builds (atlas-cli).
# Omit for dev `cargo check` to avoid the C compile chain.
[features]
default = ["http", "ffi"]
http = ["dep:reqwest", "dep:rustls", "dep:webpki-roots", "dep:tungstenite", "dep:urlencoding"]
ffi  = ["dep:libloading", "dep:libffi"]

[dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
atlas-config = { path = "../atlas-config" }
rand = "0.10"
ordered-float = "4.5"
regex = "1"
chrono = "0.4"
chrono-tz = "0.8"
base64 = "0.22"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "sync", "time", "fs", "io-util", "macros"] }
futures-util = "0.3"
notify = "8.2"

# Path manipulation (phase-13a)
pathdiff = "0.2"
dirs = "5.0"

# Compression (phase-14a, 14b, 14c)
flate2 = "1.0"
tar = "0.4"
zip = "8.2"
termcolor = "1.4.1"
libc = "0.2"

# Bytecode checksum
crc32fast = "1.4"

# Crypto (systems-level stdlib — pure Rust, fast)
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
blake3 = "1"
hex = "0.4"

# HTTP / networking (C build chain — feature-gated)
reqwest        = { version = "0.13", features = ["blocking", "json"], optional = true }
urlencoding    = { version = "2.1", optional = true }
rustls         = { version = "0.23", optional = true }
webpki-roots   = { version = "0.26", optional = true }
tungstenite    = { version = "0.26", optional = true }

# FFI (C build chain — feature-gated)
libloading = { version = "0.8", optional = true }
libffi     = { version = "5.1", optional = true }

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
proptest.workspace = true
pretty_assertions.workspace = true
tempfile = "3.8"
criterion = "0.5"
atlas-formatter = { path = "../atlas-formatter" }

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "typechecker"
harness = false

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "vm_performance_benches"
harness = false

[[bench]]
name = "stdlib_benchmarks"
harness = false

[[bench]]
name = "parity"
harness = false

[[bench]]
name = "v02_vm_optimization_benches"
harness = false

[[bench]]
name = "v02_interpreter_benches"
harness = false

[[bench]]
name = "v02_stdlib_benches"
harness = false

[[bench]]
name = "v02_comprehensive_benches"
harness = false
